gungraun/tests/ui/test_binary_benchmark_bench_attribute_setup_teardown_when_invalid.stderr
error[E0061]: this function takes 1 argument but 0 arguments were supplied
 --> tests/ui/test_binary_benchmark_bench_attribute_setup_teardown_when_invalid.rs:7:27
  |
6 |     #[binary_benchmark]
  |     ------------------- an argument of type `&str` is missing
7 |     #[bench::some(setup = setup)]
  |                           ^^^^^
  |
note: function defined here
 --> tests/ui/test_binary_benchmark_bench_attribute_setup_teardown_when_invalid.rs:4:8
  |
4 |     fn setup(_arg: &str) {}
  |        ^^^^^ ----------
help: provide the argument
  |
6 |     setup(/* &str */)
  |

error[E0061]: this function takes 1 argument but 2 arguments were supplied
  --> tests/ui/test_binary_benchmark_bench_attribute_setup_teardown_when_invalid.rs:19:46
   |
19 |     #[bench::some(args = ("1", "2"), setup = setup)]
   |                          ----------          ^^^^^
   |                          |
   |                          unexpected argument of type `&str`
   |
note: function defined here
  --> tests/ui/test_binary_benchmark_bench_attribute_setup_teardown_when_invalid.rs:16:8
   |
16 |     fn setup(_arg: &str) {}
   |        ^^^^^ ----------

error[E0061]: this function takes 1 argument but 0 arguments were supplied
  --> tests/ui/test_binary_benchmark_bench_attribute_setup_teardown_when_invalid.rs:33:30
   |
32 |     #[binary_benchmark]
   |     ------------------- an argument of type `&str` is missing
33 |     #[bench::some(teardown = teardown)]
   |                              ^^^^^^^^
   |
note: function defined here
  --> tests/ui/test_binary_benchmark_bench_attribute_setup_teardown_when_invalid.rs:30:8
   |
30 |     fn teardown(_arg: &str) {}
   |        ^^^^^^^^ ----------
help: provide the argument
   |
32 |     teardown(/* &str */)
   |

error[E0061]: this function takes 1 argument but 2 arguments were supplied
  --> tests/ui/test_binary_benchmark_bench_attribute_setup_teardown_when_invalid.rs:45:49
   |
45 |     #[bench::some(args = ("1", "2"), teardown = teardown)]
   |                          ----------             ^^^^^^^^
   |                          |
   |                          unexpected argument of type `&str`
   |
note: function defined here
  --> tests/ui/test_binary_benchmark_bench_attribute_setup_teardown_when_invalid.rs:42:8
   |
42 |     fn teardown(_arg: &str) {}
   |        ^^^^^^^^ ----------

error[E0061]: this function takes 1 argument but 0 arguments were supplied
  --> tests/ui/test_binary_benchmark_bench_attribute_setup_teardown_when_invalid.rs:59:27
   |
59 |     #[bench::some(setup = setup())]
   |                           ^^^^^-- an argument of type `&str` is missing
   |
note: function defined here
  --> tests/ui/test_binary_benchmark_bench_attribute_setup_teardown_when_invalid.rs:56:8
   |
56 |     fn setup(_arg: &str) {}
   |        ^^^^^ ----------
help: provide the argument
   |
59 |     #[bench::some(setup = setup(/* &str */))]
   |                                ~~~~~~~~~~~~

error[E0061]: this function takes 1 argument but 2 arguments were supplied
  --> tests/ui/test_binary_benchmark_bench_attribute_setup_teardown_when_invalid.rs:71:27
   |
71 |     #[bench::some(setup = setup("1", "2"))]
   |                           ^^^^^    -----
   |                                    | |
   |                                    | unexpected argument of type `&'static str`
   |                                    help: remove the extra argument
   |
note: function defined here
  --> tests/ui/test_binary_benchmark_bench_attribute_setup_teardown_when_invalid.rs:68:8
   |
68 |     fn setup(_arg: &str) {}
   |        ^^^^^ ----------

error[E0061]: this function takes 1 argument but 0 arguments were supplied
  --> tests/ui/test_binary_benchmark_bench_attribute_setup_teardown_when_invalid.rs:83:30
   |
83 |     #[bench::some(teardown = teardown())]
   |                              ^^^^^^^^-- an argument of type `&str` is missing
   |
note: function defined here
  --> tests/ui/test_binary_benchmark_bench_attribute_setup_teardown_when_invalid.rs:80:8
   |
80 |     fn teardown(_arg: &str) {}
   |        ^^^^^^^^ ----------
help: provide the argument
   |
83 |     #[bench::some(teardown = teardown(/* &str */))]
   |                                      ~~~~~~~~~~~~

error[E0061]: this function takes 1 argument but 2 arguments were supplied
  --> tests/ui/test_binary_benchmark_bench_attribute_setup_teardown_when_invalid.rs:95:30
   |
95 |     #[bench::some(teardown = teardown("1", "2"))]
   |                              ^^^^^^^^    -----
   |                                          | |
   |                                          | unexpected argument of type `&'static str`
   |                                          help: remove the extra argument
   |
note: function defined here
  --> tests/ui/test_binary_benchmark_bench_attribute_setup_teardown_when_invalid.rs:92:8
   |
92 |     fn teardown(_arg: &str) {}
   |        ^^^^^^^^ ----------

error[E0061]: this function takes 1 argument but 2 arguments were supplied
   --> tests/ui/test_binary_benchmark_bench_attribute_setup_teardown_when_invalid.rs:108:27
    |
108 |     #[bench::some(setup = setup("1", "2"), teardown = teardown("1", "2"))]
    |                           ^^^^^    -----
    |                                    | |
    |                                    | unexpected argument of type `&'static str`
    |                                    help: remove the extra argument
    |
note: function defined here
   --> tests/ui/test_binary_benchmark_bench_attribute_setup_teardown_when_invalid.rs:105:8
    |
105 |     fn setup(_arg: &str) {}
    |        ^^^^^ ----------

error[E0061]: this function takes 1 argument but 2 arguments were supplied
   --> tests/ui/test_binary_benchmark_bench_attribute_setup_teardown_when_invalid.rs:108:55
    |
108 |     #[bench::some(setup = setup("1", "2"), teardown = teardown("1", "2"))]
    |                                                       ^^^^^^^^    -----
    |                                                                   | |
    |                                                                   | unexpected argument of type `&'static str`
    |                                                                   help: remove the extra argument
    |
note: function defined here
   --> tests/ui/test_binary_benchmark_bench_attribute_setup_teardown_when_invalid.rs:104:8
    |
104 |     fn teardown(_arg: &str) {}
    |        ^^^^^^^^ ----------

error[E0061]: this function takes 1 argument but 0 arguments were supplied
   --> tests/ui/test_binary_benchmark_bench_attribute_setup_teardown_when_invalid.rs:121:27
    |
120 |     #[binary_benchmark]
    |     ------------------- an argument of type `&str` is missing
121 |     #[bench::some(setup = setup, teardown = teardown)]
    |                           ^^^^^
    |
note: function defined here
   --> tests/ui/test_binary_benchmark_bench_attribute_setup_teardown_when_invalid.rs:118:8
    |
118 |     fn setup(_arg: &str) {}
    |        ^^^^^ ----------
help: provide the argument
    |
120 |     setup(/* &str */)
    |

error[E0061]: this function takes 1 argument but 0 arguments were supplied
   --> tests/ui/test_binary_benchmark_bench_attribute_setup_teardown_when_invalid.rs:121:45
    |
120 |     #[binary_benchmark]
    |     ------------------- an argument of type `&str` is missing
121 |     #[bench::some(setup = setup, teardown = teardown)]
    |                                             ^^^^^^^^
    |
note: function defined here
   --> tests/ui/test_binary_benchmark_bench_attribute_setup_teardown_when_invalid.rs:117:8
    |
117 |     fn teardown(_arg: &str) {}
    |        ^^^^^^^^ ----------
help: provide the argument
    |
120 |     teardown(/* &str */)
    |
